added gallery section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import { AboutSection } from '../components/home/AboutSection';
 import { HeroSection } from '../components/home/HeroSection';
 import { FeaturesSection } from '../components/home/FeaturesSection';
 import { ContactSection } from '../components/home/ContactSection';
+import { PorfolioSection } from '../components/home/PortfolioSection';
 ---
 
 <Layout title="Croche By Ameesha | Handmade with Love">
   <HeroSection client:load />
   <FeaturesSection client:load />
+  <PorfolioSection client:load />
   <AboutSection client:load />
   <ContactSection client:load />
 </Layout>
