--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Navbar from "../components/layout/Navbar"
 import '../assets/css/global.css';
 import Footer from "../components/layout/Footer";
+import { Toast } from "../components/ui/Toast";
 
 interface Props {
   title?: string;
@@ -57,6 +58,7 @@ const {
   </head>
   <body>
     <Navbar client:load />
+    <Toast client:load />
     <slot />
     <Footer client:load />
   </body>
