--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,10 @@ const {
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content="/og-image.png" />
 
+    <!-- Sitemap -->
+    <link rel="sitemap" href="/sitemap-0.xml" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <!-- Additional SEO tags -->
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
